Fixed alignment

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,18 +14,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     &.row-reverse {
       .row {
         border-radius: 20px;
         box-shadow: 0 16px 32px -12px rgba(0, 0, 20, 0.4);
         display: flex;
         flex-direction: row-reverse;
-        margin: 55px auto;
+        margin: 0 auto;
         background-color: hsl(244, 38%, 16%);
         width: 85%;
-        height: 100%;
+        height: auto;
 
         .col {
           flex: 1 0 50%;
@@ -120,9 +120,11 @@ body {
 // Tablets
 @media (max-width: 992px) {
   body {
+    height: auto;
     .wrapper {
+      height: 100%;
       width: 85%;
-      margin: 0 auto;
+      margin: 50px auto;
       &.row-reverse {
         .row {
           flex-direction: row;
@@ -184,6 +186,9 @@ body {
 @media (max-width: 768px) {
   body {
     .wrapper {
+      height: auto;
+      width: 85%;
+      margin: 50px auto;
       width: 90%;
 
       &.row-reverse {
